fix: profile avatar link width on mobile

--- a/assets/src/styles/admin.scss
+++ b/assets/src/styles/admin.scss
@@ -67,6 +67,7 @@ $pb-icon-lg-size: 36px;
       border-radius: 50%;
       border: 2px solid transparent;
       height: auto;
+      width: auto;
 
       img {
         position: unset;
